<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:id="@+id/txtNombres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/texto_nombres"/>
    <EditText
        android:id="@+id/txtApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/texto_apellidos"/>
    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/texto_telefono"/>
    <EditText
        android:id="@+id/txtPlaca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/texto_placa"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton_crear"
        android:onClick="validateCreatePerson"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"/>
</LinearLayout>
