<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/personasCard"
    android:layout_margin="20px"
    app:cardElevation="10px">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="500px"
            android:scaleType="centerCrop"
            android:src="@drawable/logoreservpark"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="#80000000"
            android:layout_alignParentBottom="true">
            <TextView
                android:id="@+id/cvNombres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textoNombres"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="8pt"/>
            <TextView
                android:id="@+id/cvApellidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textoApellidos"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="8pt"/>
            <TextView
                android:id="@+id/cvTelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textoTelefono"
                android:textColor="@android:color/white"
                android:textSize="5pt"/>
            <TextView
                android:id="@+id/cvPlaca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textoPlaca"
                android:textColor="@android:color/white"
                android:textSize="5pt"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10px"
                android:gravity="right">
                <!--<CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"/>-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_mg"
                    android:textSize="5pt"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>