<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentTop="true"
            android:background="#b2ff59">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/texto_busqueda"
                android:layout_weight="1"/>
            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/texto_boton_buscar"/>
        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/personasRecylerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="65dp"
            android:layout_marginTop="55dp">
        </android.support.v7.widget.RecyclerView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:background="#b2ff59"
            android:padding="20px">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_boton_registrar"
                android:textColor="@android:color/white"
                android:background="#2e7d32"
                android:onClick="goToRegister"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>